# ADL

./: CMakeLists.txt  QR_code.py  QR_code_2.py  QR_code_my_calibration.py  QR_code_my_calibration_2.py  calibracion.py  qr_code.cpp  qr_detection.py
QR/: QR_code.py  QR_code_fix.py  desviacion.py  qr_detection.py
